[gd_scene load_steps=7 format=3 uid="uid://brtpd5681jh4a"]

[ext_resource type="Script" uid="uid://c7ei7o6y1svua" path="res://scripts/main_menu.gd" id="1_c0yim"]
[ext_resource type="Texture2D" uid="uid://dbvqfj4rgkr4k" path="res://assets/menu/cooltext472955919171426.png" id="2_w2g4b"]
[ext_resource type="Texture2D" uid="uid://dqkcxcbgjltjx" path="res://assets/background/PineForestParallax/MorningLayer6.png" id="4_kbo6s"]
[ext_resource type="Texture2D" uid="uid://dupcbbs4ont0u" path="res://assets/background/PineForestParallax/MorningLayer4.png" id="5_su3o7"]
[ext_resource type="Texture2D" uid="uid://dm22p76f0sywv" path="res://assets/background/PineForestParallax/MorningLayer2.png" id="6_6dpkr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_35080"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.432929, 0.578139, 0.514704, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="MainMenu" type="Node"]
script = ExtResource("1_c0yim")

[node name="game_logo" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -428.5
offset_top = -213.0
offset_right = 428.5
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_w2g4b")

[node name="HBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -46.0
offset_right = 237.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Play" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_35080")
text = "Play"

[node name="Character" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_35080")
text = "Character"

[node name="Credits" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_35080")
text = "Credits"

[node name="Exit" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_35080")
text = "Exit"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scale = Vector2(0.5, 0.5)
transform = Transform2D(0.5, 0, 0, 0.5, 0, 0)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 1)
motion_mirroring = Vector2(3200, 1800)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color(0.450431, 0.765167, 0.41543, 1)
texture = ExtResource("4_kbo6s")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(0, -400)
motion_scale = Vector2(0.4, 1)
motion_mirroring = Vector2(3200, 1800)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource("5_su3o7")
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(0, -400)
motion_scale = Vector2(0.8, 1)
motion_mirroring = Vector2(3200, 1800)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource("6_6dpkr")
centered = false

[connection signal="pressed" from="HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="HBoxContainer/Character" to="." method="_on_character_pressed"]
[connection signal="pressed" from="HBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="HBoxContainer/Exit" to="." method="_on_exit_pressed"]
